--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -74,12 +74,13 @@ jobs:
           disable-sudo: true
           egress-policy: block
           allowed-endpoints: >
+            api.github.com:443
             archive.ubuntu.com:80
             auth.docker.io:443
             developer.download.nvidia.com:443
             ghcr.io:443
             github.com:443
-            pkg-containers.githubusercontent.com:443
+            ports.ubuntu.com:80
             production.cloudflare.docker.com:443
             raw.githubusercontent.com:443
             registry-1.docker.io:443
